k8s/app-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
      version: v2
  template:
    metadata:
      labels:
        app: patient-service
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: patient-service
          image: patient-service:v2 # Representing a new version
          ports:
            - containerPort: 4000
            - containerPort: 9091
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
