k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  selector:
    app: patient-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient-service
      version: v1
  template:
    metadata:
      labels:
        app: patient-service
        version: v1

    spec:
      containers:
        - name: patient-service
          image: patient-service:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 4000
            failureThreshold: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 4000
            initialDelaySeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 4000
            initialDelaySeconds: 1
            periodSeconds: 10
