k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-db
spec:
  ports:
    - port: 5432
  selector:
    app: patient-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-db
  template:
    metadata:
      labels:
        app: patient-db
    spec:
      containers:
        - name: db
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgres-storage
          emptyDir: {}
